Fixed header image stretch on join us page. Added extra padding to learn to row section. Updated img in LTR section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,7 @@ h4 {
 
 .ltr-body-text {
     text-align: justify;
+    padding: 30px;
 }
 
 /*------------membership-----------*/
